# rez-usd-maya-pxr

./: CMakeLists.txt  README.md  build.sh  configure.sh  install.sh  package.py
